--- a/Pymaceuticals_Code.ipynb
+++ b/Pymaceuticals_Code.ipynb
@@ -17,9 +17,9 @@
     "- A bar graph was generated for number of timepoints collected for each mouse and drug regimen. \n",
     "    - Most drugs have similar numbers of timepoints overall. With the exceptions of Capomulin and Ramicane which have a higher number of timepoints taken and Propriva which has a lower number of timepoints taken. \n",
     "- Due to some mice having more timepoints than others it skews the value counts of male vs female. After taking out additional timepoints a pie chart can be made to compare. \n",
-    "    - The data set is even across the two sexes, with slightly more males \n",
+    "    - The data set is even across the two sexes.\n",
     "- A comparison using boxplots was created for four of the drug regimens (Capomulin, Ramicane, Infubinol, and Ceftamin).\n",
-    "    - Ibupinol had one potential outlier with one mouse tumor which was much lower in size than the others in the dataset. Capomulin and Ramicane both had lower tumor sizes than the other two drugs with some of their max tumor sizes being the minimum tumor sizes for Infubinol and Ceftamin. \n",
+    "    - Infubinol had one potential outlier with one mouse tumor which was much lower in size than the others in the dataset. Capomulin and Ramicane both had lower tumor sizes than the other two drugs with some of their max tumor sizes being the minimum tumor sizes for Infubinol and Ceftamin. \n",
     "    - It seems, of the four drug regimens, that Capomulin and Ramicane have the best performance of reducing tumor size. \n",
     "- Looking further into the Capomulin regimen the line chart gives some insight into the obstruction of tumor growth.\n",
     "    - Tumor growth is rapid for the first 20 days, then it sharply declines until about day 25 where it begins to grow again. After a shorter growth period on day 30 the tumor declines in size for another 5 days. At days 40-45 the tumor begins another growth period at which point the data set ends.\n",
